<unreleased> Jim Winstead <jimw@mysql.com> (4.01)
* Fixed Bundle::DBD::mysql to only include modules required for using
  DBD::mysql, not the old Mysql package. [rt.cpan.org #24096]
* Updated Makefile.PL to not include files in .svn directories

2006-12-22 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (4.00)
* Added Alexey Stroganov's patch which fixes varying number of columns in 
  multiple result sets. Added new test cases to 80procs.t based of his
  test script (bug #21028) (Thanks Alexey!). Also fixed 80procs.t to allow
  'CALL' to be prepared
* Added Philip Stoev's patch for DATA_TYPE date and time columns (bug #23988)
  (Thanks Philip!) 
* Reworked (for working with 4.0, which doesn't support sqlstate) Philip Stoev's 
  patch for sqlstate, bug #23935 (Thanks Philip!)
* New Versioning! 4.00 now. This dev tree will now become trunk
* Cleaned up much code that failed between versions (!!!)
* Turned off prepared statements by default
* Tested this with 5.1, 5.0, 4.1, 4.0. Works with ALL these versions!

2006-10-10 Patrick Galbraith <patg@patg.net>, Alexey Stroganov (3.0009_1)
* Added fbind and bind alloc to dbd_st_describe. This was causing a crash
  when using with mod_perl

2006-10-10 Patrick Galbraith <patg@patg.net> (3.0008_1)
* Added patch for SSL Verify Certificate (Thanks Eric Chen!)
* Added multiple fixes to dbd_st_prepare which fixed variable overwrite
  and unset increment counter. Also improved loop which checks statements
  for presence of "LIMIT" by using a pointer as opposed to char array
  increment variable. These errors were showing up in OpenBSD and other
  Unixen (which I think all BSD-based) (Thanks to Kyle George!)
* Added fix to Makefile.PL to obtain correct build flags on VMS 
  (Thanks to Eric Milkie!)
* Fixed casting of num_params to unsigned int in calls to NewZ in mysql.xs

2006-10-07 Patrick Galbraith <patg@patg.net>, Jim Winstead <jimw@mysql.com>
  (3.0007_2)
  * Added UTF8 patch from Dominic Mitchell (Thanks!)